# first-party-demo

./: Cargo.toml  README.md
crates/demo-lib/: Cargo.toml
crates/demo-lib/src/: lib.rs
crates/demo-util/: Cargo.toml
crates/demo-util/src/: lib.rs
examples/: platform_demo.rs
src/: lib.rs
tests/: integration_test.rs
